# galdi

./: .gitignore  Cargo.toml  README.md  mise.toml
examples/: diff.changes.json  diff.identical.json  diff.json  snapshot.json
galdi/: Cargo.toml
galdi/src/: cli.rs  main.rs  mcp.rs
galdi_core/: Cargo.toml
galdi_core/src/: checksum.rs  diff.rs  error.rs  fs_scan.rs  lib.rs  plumbah.rs  snapshot.rs
galdi_core/tests/: integration_checksum.rs  property_checksum.rs  property_plumbah.rs  property_scanner.rs  property_snapshot.rs
galdi_core/tests/common/: assertions.rs  fixtures.rs  generators.rs  mod.rs  platform.rs
galdi_diff/: Cargo.toml
galdi_diff/src/: app.rs  cli.rs  diff.rs  lib.rs  main.rs
galdi_diff/tests/: property_diff.rs
galdi_snapshot/: Cargo.toml
galdi_snapshot/sink/: jaq.rs
galdi_snapshot/src/: app.rs  cli.rs  lib.rs  main.rs  output.rs
galdi_snapshot/tests/: integration_jsonl.rs
