[package]
name = "galdi"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core libraries
galdi_core = { path = "../galdi_core" }
galdi_snapshot = { path = "../galdi_snapshot" }
galdi_diff = { path = "../galdi_diff" }

# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# MCP server
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
rmcp = { version = "0.12", features = ["server", "transport-io"] }
schemars = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
