[package]
name = "galdi_diff"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
galdi_core = { path = "../galdi_core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0" # Error handling in main
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
rmcp = { version = "0.12", features = ["server", "transport-io"] }
schemars = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

[dev-dependencies]
proptest = "1.9" # Property-based testing
